--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 		<!-- Theme CSS -->
-		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-3.css">
+		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-8.css">
 		<link rel="stylesheet" href="./assets/css/theme-new.css">
-
+		<link id="part1" href="extern.html" rel="import" />
 	</head>
 
 	<body>
@@ -41,7 +41,7 @@
 						<div class="profile-section pt-3 pt-lg-0">
 							<img class="profile-image mb-3 rounded-circle mx-auto" src="./assets/images/profile.png" alt="image">
 
-							<div class="bio mb-3">Hi, my name is Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
+							<div class="bio mb-3">Hi, I'm Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
 							<!--//bio-->
 							<ul class="social-list list-inline py-2 mx-auto">
@@ -82,16 +82,6 @@
 							<li class="nav-item">
 								<a class="nav-link" href="contact.html"><i class="fas fa-envelope-open-text fa-fw mr-2"></i>Contact</a>
 							</li>
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-									aria-haspopup="true" aria-expanded="false">
-									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
-								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="blog-home.html">Blog</a>
-									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
-								</div>
-							</li>
 						</ul>
 
 						<div class="my-2">
@@ -128,8 +118,8 @@
 					</div>
 					<a class="btn btn-primary" href="contact.html" target="_blank"><i class="fas fa-paper-plane mr-2"></i>Hire
 						Me</a>
-
-
+					<a class="btn btn-secondary" href="services.html#freelancing_profiles"><i
+							class="fas fa-paper-plane mr-2"></i>Checkout Freelancing Profiles</a>
 				</div>
 				<!--//container-->
 			</section>
@@ -268,7 +258,39 @@
 							<!--//card-->
 						</div>
 						<!--//col-->
-						<div class="isotope-item col-md-6 mb-5 webapp frontend">
+						<div class="isotope-item col-md-6 mb-5 mobileapp frontend">
+							<div class="card project-card">
+								<div class="row no-gutters">
+									<div class="col-lg-4 card-img-holder">
+										<img src="./assets/images/project/project-8.jpg" class="card-img" alt="image">
+									</div>
+									<div class="col-lg-8">
+										<div class="card-body">
+											<h5 class="card-title"><a href="project.html" class="theme-link">SodaSulf Grocery Store App</a>
+											</h5>
+											<p class="card-text">Soda Sulf : A complete Online Grocery Store in Sahiwal.
+												SodaSulfs is a android app. Its a Hybrid Mobile App created this app with Ionic 4 and Angular 7
+												and Sass.</p>
+											<p class="card-text"><small class="text-muted">Hawk IT</small></p>
+										</div>
+									</div>
+								</div>
+								<div class="link-mask">
+									<div class="link-mask-text">
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<!-- <a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
+										</a> -->
+									</div>
+								</div>
+								<!--//link-mask-->
+							</div>
+							<!--//card-->
+						</div>
+						<!--//col-->
+						<!-- <div class="isotope-item col-md-6 mb-5 webapp frontend">
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
@@ -288,19 +310,16 @@
 										<a target="_blank" class="btn btn-secondary" href="project.html">
 											<i class="fas fa-eye mr-2"></i> Live
 										</a>
-										<!-- <a target="_blank" class="btn btn-primary" href="project.html">
+										<a target="_blank" class="btn btn-primary" href="project.html">
 											<i class="fas fa-info-circle mr-2"></i> Detail
-										</a> -->
+										</a>
 									</div>
 								</div>
-								<!--//link-mask-->
-							</div>
-							<!--//card-->
-						</div>
+					</div>
+				</div> -->
 						<!--//col-->
 					</div>
 					<!--//row-->
-
 				</div>
 			</section>
 
@@ -308,7 +327,6 @@
 				<small class="copyright">&copy; Copyright 2019. Designed by <a
 						href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan">Muhammad Ayoub</a> </small>
 			</footer>
-
 		</div>
 		<!--//main-wrapper-->
 
@@ -316,18 +334,17 @@
 		<!-- Javascript -->
 		<script defer src="./assets/fontawesome/js/all.js"></script>
 		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
-		<script src="./assets/plugins/popper.min.js"></script>
-		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
 
 		<!--Page Specific JS -->
 		<script type="text/javascript" src="./assets/plugins/imagesloaded.pkgd.min.js"></script>
 		<script type="text/javascript" src="./assets/plugins/isotope.pkgd.min.js"></script>
-
 		<script type="text/javascript" src="./assets/js/isotope-custom.js"></script>
 
 		<!-- Dark Mode -->
 		<script src="./assets/plugins/js-cookie.min.js"></script>
 		<script src="./assets/js/dark-mode.js"></script>
+
 	</body>
 
 </html>
