--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 
 		<!-- Theme CSS -->
-		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-3.css">
+		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-8.css">
 		<link rel="stylesheet" href="./assets/css/theme-new.css">
 
 	</head>
@@ -42,7 +42,7 @@
 						<div class="profile-section pt-3 pt-lg-0">
 							<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
 
-							<div class="bio mb-3">Hi, my name is Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
+							<div class="bio mb-3">Hi, I'm Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
 							<!--//bio-->
 							<ul class="social-list list-inline py-2 mx-auto">
@@ -82,16 +82,6 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="contact.html"><i class="fas fa-envelope-open-text fa-fw mr-2"></i>Contact</a>
-							</li>
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-									aria-haspopup="true" aria-expanded="false">
-									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
-								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="blog-home.html">Blog</a>
-									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
-								</div>
 							</li>
 						</ul>
 
