--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 		<!-- Theme CSS -->
-		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-3.css">
+		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-8.css">
 		<link rel="stylesheet" href="./assets/css/theme-new.css">
 
 	</head>
@@ -41,7 +41,7 @@
 						<div class="profile-section pt-3 pt-lg-0">
 							<img class="profile-image mb-3 rounded-circle mx-auto" src="./assets/images/profile.png" alt="image">
 
-							<div class="bio mb-3">Hi, my name is Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
+							<div class="bio mb-3">Hi, I'm Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
 							<!--//bio-->
 							<ul class="social-list list-inline py-2 mx-auto">
@@ -80,16 +80,6 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="contact.html"><i class="fas fa-envelope-open-text fa-fw mr-2"></i>Contact</a>
-							</li>
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-									aria-haspopup="true" aria-expanded="false">
-									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
-								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="blog-home.html">Blog</a>
-									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
-								</div>
 							</li>
 						</ul>
 
@@ -342,6 +332,40 @@
 			</section>
 			<!--//faq-section-->
 
+			<section class="pricing-section py-5">
+				<div class="container single-col-max-width">
+					<h3 class="text-center mb-4" id="freelancing_profiles">Freelancing Profiles</h3>
+					<div class="text-center mb-5">Visit my freelancing profiles to order custom service</div>
+					<table class="table table-bordered">
+						<thead>
+							<tr class="border-0">
+								<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
+								<th scope="col" class="pricing-package-title pricing-2-data text-center mobile-is-hidden">Freelancer.com</th>
+								<!-- <th scope="col" class="pricing-package-title pricing-3-data mobile-is-hidden">Premium</th> -->
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="pricing-price-row">
+								<td class="pricing-2-data mobile-is-hidden"><img height="150" width="" src="./assets/images/logos/fiverr-logo-png-2.png" alt="" class="img-fluid"></td>
+								<td class="pricing-2-data mobile-is-hidden"><img height="150" width="" src="./assets/images/logos/freelancerlogo1.png" alt="" class="img-fluid"></td>
+								<!-- <td class="pricing-3-data mobile-is-hidden"><span class="price-number">$750+</span></td> -->
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr class="pricing-cta-row">
+								<td class="pricing-1-data text-center"><a class="btn btn-primary" href="https://www.fiverr.com/mayoub55"><i class="fas fa-paper-plane mr-2"></i> Visit Profile</a></td>
+								<td class="pricing-2-data text-center mobile-is-hidden"><a class="btn btn-primary" href="https://www.freelancer.pk/u/ayoubkhan558"><i class="fas fa-paper-plane mr-2"></i> Visit Profile</a></td>
+								<!-- <td class="pricing-3-data mobile-is-hidden"><a class="btn btn-primary" href="#">Get A Quote</a></td> -->
+							</tr>
+						</tfoot>
+					</table>
+					<!--//pricing-table-->
+
+				</div>
+				<!--//container-->
+			</section>
+			<!--//profiles-section-->
+
 			<footer class="footer text-center py-4">
 				<small class="copyright">&copy; Copyright 2019. Designed by <a
 						href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan">Muhammad Ayoub</a> </small>
@@ -354,8 +378,7 @@
 		<!-- Javascript -->
 		<script defer src="./assets/fontawesome/js/all.js"></script>
 		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
-		<script src="./assets/plugins/popper.min.js"></script>
-		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/pricing.js"></script>
 
 		<!-- Dark Mode -->
