--- a/blog-home-alt.html
+++ b/blog-home-alt.html
@@ -19,7 +19,7 @@
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 		<!-- Theme CSS -->
-		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-3.css">
+		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-8.css">
 		<link rel="stylesheet" href="./assets/css/theme-new.css">
 
 	</head>
@@ -41,7 +41,7 @@
 						<div class="profile-section pt-3 pt-lg-0">
 							<img class="profile-image mb-3 rounded-circle mx-auto" src="./assets/images/profile.png" alt="image">
 
-							<div class="bio mb-3">Hi, my name is Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
+							<div class="bio mb-3">Hi, I'm Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
 							<!--//bio-->
 							<ul class="social-list list-inline py-2 mx-auto">
@@ -272,8 +272,7 @@
 		<!-- Javascript -->
 		<script defer src="./assets/fontawesome/js/all.js"></script>
 		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
-		<script src="./assets/plugins/popper.min.js"></script>
-		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
 
 		<!-- Dark Mode -->
 		<script src="./assets/plugins/js-cookie.min.js"></script>
