--- a/blog-home-alt.html
+++ b/blog-home-alt.html
@@ -24,7 +24,8 @@
 
 	</head>
 
-	<body>
+		<body>
+		
 
 		<header class="header text-center">
 			<div class="force-overflow">
@@ -159,13 +160,13 @@
 							<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="./assets/images/blog/blog-post-thumb-2.jpg"
 								alt="image">
 							<div class="media-body">
-								<h3 class="title mb-1"><a href="blog-post.html">About Remote Working</a></h3>
+								<h3 class="title mb-1"><a href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">About Remote Working</a></h3>
 								<div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min
 										read</span><span class="comment"><a href="#">26 comments</a></span></div>
 								<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
 									dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
 									mus. Donec quam felis, ultricies...</div>
-								<a class="more-link" href="blog-post.html">Read more &rarr;</a>
+								<a class="more-link" href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">Read more &rarr;</a>
 							</div>
 							<!--//media-body-->
 						</div>
