--- a/blog-home.html
+++ b/blog-home.html
@@ -26,6 +26,7 @@
 
 	<body>
 
+
 		<header class="header text-center">
 			<div class="force-overflow">
 				<h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">M. Ayoub</a></h1>
@@ -144,16 +145,19 @@
 						<!--//col-->
 						<div class="col-md-4 mb-3">
 							<div class="card blog-post-card">
-								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-2.jpg" alt="image">
+								<img class="card-img-top" src="https://i.stack.imgur.com/bk67f.png" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" href="blog-post.html">About Remote Working</a></h5>
+									<h5 class="card-title"><a class="theme-link" target="_blank"
+											href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">New JavaScript UI
+											libraries & frameworks for 2020</a></h5>
 									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
 										eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
-									<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
+									<p class="mb-0"><a class="more-link" target="_blank"
+											href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">Read more
+											&rarr;</a></p>
 								</div>
 								<div class="card-footer">
-									<small class="text-muted">Published a week ago</small>
-
+									<small class="text-muted">Published 3 weeks ago</small>
 								</div>
 							</div>
 							<!--//card-->
