--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 	</head>
 
-	<body>
+		<body>
+		
 
 		<header class="header text-center">
 			<div class="force-overflow">
@@ -592,12 +593,11 @@
 						<!--//col-->
 						<div class="col-md-4 mb-5">
 							<div class="card blog-post-card">
-								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-2.jpg" alt="image">
+								<img class="card-img-top" src="https://i.stack.imgur.com/Z6YUF.jpg" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" href="blog-post.html">About Remote Working</a></h5>
-									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-										eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
-									<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
+									<h5 class="card-title"><a class="theme-link" target="_blank" href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Top Reasons to Use React in 2020</a></h5>
+									<p class="card-text">Last few years React totally overtook all the other front-end competition in popularity, mostly thanks to the extreme focus on user experience and development simplicity..</p>
+									<p class="mb-0"><a class="more-link" target="_blank" href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Read more &rarr;</a></p>
 								</div>
 								<div class="card-footer">
 									<small class="text-muted">Published a week ago</small>
@@ -609,13 +609,12 @@
 						<!--//col-->
 						<div class="col-md-4 mb-5">
 							<div class="card blog-post-card">
-								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
+								<img class="card-img-top" src="https://i.stack.imgur.com/bk67f.png" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" href="blog-post.html">A Guide to Becoming a Full-Stack
-											Developer</a></h5>
+									<h5 class="card-title"><a class="theme-link" target="_blank"href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">New JavaScript UI libraries & frameworks for 2020</a></h5>
 									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
 										eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
-									<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
+									<p class="mb-0"><a class="more-link" target="_blank"href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">Read more &rarr;</a></p>
 								</div>
 								<div class="card-footer">
 									<small class="text-muted">Published 3 weeks ago</small>
