--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
 
 	<body>
 
+
 		<header class="header text-center">
 			<div class="force-overflow">
 				<h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">M. Ayoub</a></h1>
@@ -288,6 +289,34 @@
 								<!--//link-mask-->
 							</div>
 							<!--//card-->
+						</div>
+						<!--//col-->
+						<div class="isotope-item col-md-6 mb-5 webapp frontend">
+							<div class="card project-card">
+								<div class="row no-gutters">
+									<div class="col-lg-4 card-img-holder">
+										<img src="./assets/images/project/project-4.jpg" class="card-img" alt="image">
+									</div>
+									<div class="col-lg-8">
+										<div class="card-body">
+											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
+											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
+												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+											<p class="card-text"><small class="text-muted">Client: Startup Hub</small></p>
+										</div>
+									</div>
+								</div>
+								<div class="link-mask">
+									<div class="link-mask-text">
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
+										</a>
+									</div>
+								</div>
+							</div>
 						</div>
 						<!--//col-->
 						<!-- <div class="isotope-item col-md-6 mb-5 webapp frontend">
